workplace/log/build_2024-05-04_23-17-55/learning/stderr.log
/usr/local/lib/python3.6/dist-packages/setuptools/command/install.py:37: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  setuptools.SetuptoolsDeprecationWarning,
  File "/home/mi/workplace/install/learning/lib/python3.6/site-packages/learning/track.py", line 16
    sleep 0.1S
            ^
SyntaxError: invalid syntax

